--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.40.1
-tensorflow==2.18.0  # updated to a compatible version
-numpy==2.1.3
+tensorflow==2.18.0
+numpy==1.26.0
 opencv-python
 pillow
